--- a/src/views/_includes/blocks/articles.pug
+++ b/src/views/_includes/blocks/articles.pug
@@ -14,7 +14,7 @@
             source(media="(min-width: 320px)", srcset="assets/img/articles/photo1.webp", type="image/webp")
             source(media="(min-width: 320px)", srcset="assets/img/articles/photo1.png", type="image/png")
             img(src="assets/img/articles/photo1.png", alt="photo")
-          .articles__card-label кухни
+          .articles__card-label.articles__card-label--kitchens кухни
           span.articles__card-date 10 марта 2020
           p.articles__card-description 8 марта от КухниСити в салоне  ART DE VIDRE
 
