--- a/src/views/_includes/blocks/feedback.pug
+++ b/src/views/_includes/blocks/feedback.pug
@@ -19,14 +19,14 @@ section.feedback
         .swiper-slide.feedback__swiper-slide
           .feedback__card
             .feedback__card-img
-              img(src="assets/img/feedback/kitchen1.jpg", alt="kitchen")
-              a(href="#").feedback__card-link
+              img(src="assets/img/feedback/kitchen2.jpg", alt="kitchen")
+              a(href="#").feedback__card-link.feedback__card-link--light
                 img(src="assets/img/feedback/card-link.svg", alt="arrow").feedback__card-arrow
             .feedback__info
               .feedback__user
-                img.feedback__user-social(src="assets/img/feedback/vk.svg", alt="vk")
-                span.feedback__user-name Андрей Иванов
-              p.feedback__card-text Спасибо огромное, работа вашей команды бесценный вклад в счастье многих людей, а теперь и частичка моей радости😊 Все оказалось совсем не сложно и главное быстро!!! Вы огромные молодцы🙏 
+                img.feedback__user-social(src="assets/img/feedback/instagram.svg", alt="instagram")
+                span.feedback__user-name JULLIAS_23
+              p.feedback__card-text Мой дизайнер уже давно просил разместить отзыв, но время нашлось только теперь во время карантина. Если вы приняли решение купить новую кухню от Кухни-Сити, то я могу порекомендовать салон на Проспект Мира. Кухню заказала БристельМой... 
               .span.feedback__card-date 06.05.2019 в 15:20
               a(href="#").feedback__card-button Перейти к отзыву
         .swiper-slide.feedback__swiper-slide
@@ -69,7 +69,7 @@ section.feedback
                     source(media="(min-width: 768px)", srcset="assets/img/feedback/zoon-md.svg", type="image/svg+xml")
                     source(media="(min-width: 320px)", srcset="assets/img/feedback/zoon.svg", type="image/svg+xml")
                     img(src="assets/img/feedback/otzovik.svg", alt="Otzovik")
-              p.banner__card-quantity На основе 32 отзывов
+              p.banner__card-quantity На основе 65 отзывов
             .banner__card
               .banner__card-info
                 span.banner__card-rate 4,9
@@ -78,4 +78,4 @@ section.feedback
                     source(media="(min-width: 768px)", srcset="assets/img/feedback/recommend-md.svg", type="image/svg+xml")
                     source(media="(min-width: 320px)", srcset="assets/img/feedback/recommend.svg", type="image/svg+xml")
                     img(src="assets/img/feedback/otzovik.svg", alt="Otzovik")
-              p.banner__card-quantity На основе 32 отзывов
+              p.banner__card-quantity На основе 256 отзывов
