--- a/src/views/_includes/blocks/hero.pug
+++ b/src/views/_includes/blocks/hero.pug
@@ -2,7 +2,7 @@ section.hero
   .container.hero__container
     .hero__wrap 
       h1.title.hero__title Создаем кухни, в&nbsp;которые вы влюбитесь
-      p.hero__description Производим кухни по российской-немецкой технологии. В&nbsp;каталоге более 300 моделей. А ещё, делаем бесплатный дизайн-проект конкретно для вас. 
+      p.hero__description Производим кухни по российской-немецкой технологии. В&nbsp;каталоге&nbsp;более&nbsp;300 моделей. А ещё, делаем бесплатный дизайн-проект конкретно для вас. 
       form(action="#").mainForm.hero__mainForm
         .mainForm__input-group
           input(type="text", placeholder="Ваше имя").mainForm__input.hero__input
