--- a/src/views/_includes/blocks/production.pug
+++ b/src/views/_includes/blocks/production.pug
@@ -2,8 +2,11 @@ section.production
   .production__wrap
     .production__card
       picture.production__card-img
+        source(srcset="assets/img/production/kitchens-xl.webp", media="(min-width: 1920px)" type="image/webp")
+        source(srcset="assets/img/production/kitchens-xl.jpg", media="(min-width: 1920px)" type="image/jpg")
         source(srcset="assets/img/production/kitchens-lg.webp", media="(min-width: 1280px)" type="image/webp")
         source(srcset="assets/img/production/kitchens-lg.jpg", media="(min-width: 1280px)" type="image/jpg")
+        source(srcset="assets/img/production/kitchens-md.webp", media="(min-width: 768px)" type="image/webp")
         source(srcset="assets/img/production/kitchens-md.jpg", media="(min-width: 768px)" type="image/jpg")
         //- source(srcset="assets/img/production/kitchens-md.jpg", media="(max-width: 767px)")
         source(srcset="assets/img/production/kitchens.jpg", media="(min-width: 320px)" type="image/webp")
