--- a/src/views/_includes/blocks/social.pug
+++ b/src/views/_includes/blocks/social.pug
@@ -1,7 +1,7 @@
 .social
   .container.social__container
     h2.title.social__title КухниСити в соцсетях
-    p.social__description Новые модели, выгодные акции и неожиданные дизайнерские решения ежедневно в удобном для&nbsp;вас формате. Подписывайтесь!
+    p.social__description Новые модели, выгодные акции и неожиданные дизайнерские решения ежедневно в удобном для&nbsp;вас&nbsp;формате.&nbsp;Подписывайтесь!
     h2.social__subtitle Подписывайтесь на нас
     .social__block
       a(href="#").social__block-link
