feat: 1920 pp ready!

--- a/src/views/_includes/blocks/social.pug
+++ b/src/views/_includes/blocks/social.pug
@@ -26,28 +26,28 @@
           img(src="assets/img/social/card1.png", alt="bg").social__card-img
       .swiper-slide.social__swiper-slide
         a(href="#").social__card
-          img(src="assets/img/social/card1.png", alt="bg").social__card-img
+          img(src="assets/img/social/card2.jpg", alt="bg").social__card-img
       .swiper-slide.social__swiper-slide
         a(href="#").social__card
-          img(src="assets/img/social/card1.png", alt="bg").social__card-img
+          img(src="assets/img/social/card3.jpg", alt="bg").social__card-img
       .swiper-slide.social__swiper-slide
         a(href="#").social__card
-          img(src="assets/img/social/card1.png", alt="bg").social__card-img
+          img(src="assets/img/social/card4.jpg", alt="bg").social__card-img
       .swiper-slide.social__swiper-slide
         a(href="#").social__card
-          img(src="assets/img/social/card1.png", alt="bg").social__card-img
+          img(src="assets/img/social/card5.jpg", alt="bg").social__card-img
       .swiper-slide.social__swiper-slide
         a(href="#").social__card
-          img(src="assets/img/social/card1.png", alt="bg").social__card-img
+          img(src="assets/img/social/card6.jpg", alt="bg").social__card-img
       .swiper-slide.social__swiper-slide
         a(href="#").social__card
-          img(src="assets/img/social/card1.png", alt="bg").social__card-img
+          img(src="assets/img/social/card7.jpg", alt="bg").social__card-img
       .swiper-slide.social__swiper-slide
         a(href="#").social__card
-          img(src="assets/img/social/card1.png", alt="bg").social__card-img
+          img(src="assets/img/social/card8.jpg", alt="bg").social__card-img
       .swiper-slide.social__swiper-slide
         a(href="#").social__card
-          img(src="assets/img/social/card1.png", alt="bg").social__card-img
+          img(src="assets/img/social/card9.jpg", alt="bg").social__card-img
 
   .social__cards
     a(href="#").social__card
