--- a/src/views/_includes/blocks/header.pug
+++ b/src/views/_includes/blocks/header.pug
@@ -4,7 +4,14 @@ header.header
       button.header-button.navigation__button РАссчитать кухню
       .header__location
         span.header__location-place Москва
-      .header__about О компании
+      .header__about 
+        span О компании
+        .header__about-menu
+          a(href="#").header__about-item Рассрочка
+          a(href="#").header__about-item Адреса салонов
+          a(href="#").header__about-item Гарантии
+          a(href="#").header__about-item Отзывы
+          a(href="#").header__about-item Оплата
       ul.header__menu
         li.header__menu-item 
           a(href='#') Акции
