--- a/src/scss/components/_discounts.scss
+++ b/src/scss/components/_discounts.scss
@@ -73,26 +73,29 @@
         }
     }
 
-    // &__marquee {
-    //     font-weight: 300;
-    //     font-size: 96px;
-    //     line-height: 110.8%;
-    //     /* or 106px */
-    //     letter-spacing: -0.025em;
-    //     color: #272727;
-    //     // transform: rotate(-90deg);
-    //     font-family: 'Garamond', serif;
-    //     position: absolute;
-    //     left: 0;
-    //     width: 100%;
-    //     height: 1000px;
+    &__marquee {
+        font-weight: 300;
+        font-size: 96px;
+        line-height: 110.8%;
+        /* or 106px */
+        letter-spacing: -0.025em;
+        color: #272727;
+        font-family: 'Garamond', serif;
+        position: absolute;
+        top: -32px;
+        left: -20px;
+        width: 527px;
+        height: 100% !important;
+        transform: rotate(-90deg);
+        white-space: nowrap;
+        overflow: hidden;
 
+    }
 
-    //     // height: 100%;
-    //     marquee {
-    //         transform: rotate(-90deg);
-    //         width: 123px;
-    //         // height: 100%;
-    //     }
-    // }
+    &__marquee span {
+        display: inline-block;
+        margin-right: 31px;
+        // padding-left: 100%;
+        // animation: marquee 10s linear infinite;
+    }
 }
