--- a/src/views/_includes/scripts.pug
+++ b/src/views/_includes/scripts.pug
@@ -2,3 +2,4 @@ script(src='assets/js/vendors~main.bundle.js')
 script(src='assets/js/main.bundle.js?v=' + PACKAGE.version)
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/jquery.marquee@1.5.0/jquery.marquee.min.js" type="text/javascript"></script>
