--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -46,6 +46,80 @@
 
 @media(min-width: 768px) {
 
+    // expand-768
+
+    .expand {
+        padding-top: 70px;
+
+        &__collapsible {
+            padding-left: 50px;
+            font-size: 20px;
+            padding-top: 40px;
+            padding-bottom: 40px;
+            background-size: cover;
+            margin-bottom: 0;
+
+            &-label {
+                width: 24px;
+                height: 24px;
+                left: 134px;
+            }
+        }
+
+        &__swiper {
+
+            &-container {
+                padding-left: 50px;
+            }
+
+            &-scrollbar {
+                // left: 25px !important;
+                width: 87.3% !important;
+                min-width: 671px !important;
+
+            }
+
+            &-slide {
+                width: 114px !important;
+                margin-right: 71px;
+            }
+
+            &-wrapper {
+                width: 114px !important;
+            }
+        }
+
+        &__item {
+            &-header {
+                font-size: 20px;
+            }
+        }
+
+        &__listItem {
+            font-size: 14px;
+            line-height: 40px;
+        }
+
+        &__contacts {
+            display: none;
+        }
+
+        &__nav {
+            flex-direction: row;
+            // justify-content: space-between;
+
+            &-item {
+                margin-bottom: 42px;
+                margin-right: 105px;
+
+                &:nth-last-child(1) {
+                    margin-right: 0;
+                }
+            }
+        }
+
+    }
+
 
     // base-768
 
@@ -1275,6 +1349,110 @@
 }
 
 @media (min-width: 1280px) {
+
+    // expand-1280
+    .expand {
+        top: 92px;
+        padding-top: 47px;
+        padding-bottom: 47px;
+
+        height: 800px;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+
+        &:after {
+            content: '';
+            position: absolute;
+            top: 44px;
+            left: 0;
+            background-color: transparent;
+            border-top: 2px solid rgba(50, 50, 50, 0.08);
+            border-bottom: 2px solid rgba(50, 50, 50, 0.08);
+            height: 111px;
+            width: 1920px;
+
+        }
+
+        &__item {
+            &-header {
+                font-size: 14px;
+                line-height: 120.3%;
+            }
+        }
+
+        &__listItem {
+            font-size: 12px;
+            line-height: 34px;
+        }
+
+
+        &__container {
+            max-width: 1206px;
+            display: flex !important;
+            justify-content: space-between;
+            flex-direction: row;
+            z-index: 100;
+        }
+
+        &__item {
+            position: static;
+        }
+
+        &__collapsible {
+            z-index: 100;
+            font-size: 14px;
+            line-height: 120.3%;
+            /* identical to box height, or 17px */
+            letter-spacing: 0.105em;
+            padding-top: 45px;
+            padding-bottom: 45px;
+            padding-left: 19px;
+            padding-right: 19px;
+            // padding: 0;
+            margin-right: 0px;
+            text-align: center;
+            width: auto;
+            position: static;
+
+            &-label {
+                display: none;
+            }
+        }
+
+        &__nav {
+            display: none;
+        }
+
+        &__swiper {
+            &-container {
+                padding: 0;
+                position: absolute;
+                top: 118px;
+                left: 0;
+                width: 100%;
+                // height: 572px;
+                z-index: 1000;
+            }
+
+            &-scrollbar {
+                display: none;
+            }
+
+            &-slide {
+                width: 100px !important;
+                margin-right: 118px;
+            }
+
+
+        }
+
+        .container {
+            display: none;
+        }
+
+
+    }
 
     // base-1280
     .title {
