feat: new section designers + fixed some bugs

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -22,6 +22,7 @@
 @import "components/discounts";
 @import "components/production";
 @import "components/models";
+@import "components/designers";
 @import "components/stages";
 @import "components/feedback";
 @import "components/social";
