--- a/src/scss/components/_stages.scss
+++ b/src/scss/components/_stages.scss
@@ -18,7 +18,7 @@
         }
 
         &-slide {
-            margin-right: 3px;
+            // margin-right: 3px;
 
             &:nth-child(1) {
                 .stages__card-number {
