--- a/src/views/_includes/blocks/discounts.pug
+++ b/src/views/_includes/blocks/discounts.pug
@@ -16,13 +16,11 @@ section.discounts
             button.button.button--light.discounts__card-button(data-swiper-parallax="-50") Получить скидку
         .swiper-slide.discounts__swiper-slide
           .discounts__card
-            img(src="assets/img/discounts/1.webp").discounts__card-bg 
-            h3.title.discounts__card-title(data-swiper-parallax="-50") Скидка 40% на все модели месяца
-            p.discounts__card-description(data-swiper-parallax="-50") Акции и спецпредложения для ещё более выгодной покупки кухни вашей мечты. А ещё мы бесплатно предлагаем дизайн-проект.
-            button.button.button--light.discounts__card-button(data-swiper-parallax="-50") Получить скидку
+            img(src="assets/img/discounts/2.webp").discounts__card-bg 
+            p.discounts__card-subtitle(data-swiper-parallax="-50") Заголовок акции
         .swiper-slide.discounts__swiper-slide
           .discounts__card
             img(src="assets/img/discounts/1.webp").discounts__card-bg 
-            h3.title.discounts__card-title(data-swiper-parallax="-50") Скидка 40% на все модели месяца
+            h3.title.discounts__card-title(data-swiper-parallax="-50") Дарим 150 000 ₽  на новую кухню
             p.discounts__card-description(data-swiper-parallax="-50") Акции и спецпредложения для ещё более выгодной покупки кухни вашей мечты. А ещё мы бесплатно предлагаем дизайн-проект.
-            button.button.button--light.discounts__card-button(data-swiper-parallax="-50") Получить скидку
+        
