--- a/src/views/_includes/blocks/header.pug
+++ b/src/views/_includes/blocks/header.pug
@@ -140,17 +140,20 @@ header.header
 
 
               .swiper-slide.expand__swiper-slide
-                h3.expand__item-header Фасад
-                a(href="#").expand__listItem Массив
-                a(href="#").expand__listItem "Эко-шпон"
-                a(href="#").expand__listItem ЛДСП
-                a(href="#").expand__listItem МДФ
-                a(href="#").expand__listItem Пластик
-                a(href="#").expand__listItem Акрил
-                a(href="#").expand__listItem Эмаль
-                a(href="#").expand__listItem Пленка
-                a(href="#").expand__listItem ПВХ 
-                a(href="#").expand__listItem TSS-плита
+                h3.expand__item-header Стиль
+                a(href="#").expand__listItem Классические
+                a(href="#").expand__listItem Лофт
+                a(href="#").expand__listItem Модерн
+                a(href="#").expand__listItem Скандинавский
+                a(href="#").expand__listItem Прованс
+                a(href="#").expand__listItem Хай-тек
+                a(href="#").expand__listItem Английский
+                a(href="#").expand__listItem Итальянский
+                a(href="#").expand__listItem Неоклассика
+                a(href="#").expand__listItem Ар-деко
+                a(href="#").expand__listItem Кантри
+                a(href="#").expand__listItem Минимализм
+                a(href="#").expand__listItem Современные
 
 
 
@@ -289,7 +292,7 @@ header.header
             .swiper-scrollbar.expand__swiper-scrollbar
 
         .expand__item
-          button.expand__collapsible(data-bg="assets/img/header/wardrobes.jpg") Шкафы-купе
+          button.expand__collapsible(data-bg="assets/img/header/wardrobes.jpg", data-isopen="true") Шкафы-купе
           .swiper-container.expand__swiper-container
             .swiper-wrapper.expand__swiper-wrapper
               .swiper-slide.expand__swiper-slide
@@ -727,5 +730,5 @@ header.header
 
     .container.header__container
       button.header__block-open каталог
-      .header__logo 
+      a(href="index.html").header__logo 
       button.header-button.header__block-button РАссчитать кухню
