--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -19,6 +19,9 @@ block content
   block models
     include _includes/blocks/models
 
+  block designers
+    include _includes/blocks/designers
+
   block stages
     include _includes/blocks/stages
 
