--- a/src/scss/components/_discounts.scss
+++ b/src/scss/components/_discounts.scss
@@ -16,6 +16,13 @@
 
     &__swiper-slide {
         margin-right: 10px;
+
+        &:nth-child(3) {
+            .discounts__card-title {
+                max-width: 200px;
+                ;
+            }
+        }
     }
 
     &__card {
@@ -26,6 +33,7 @@
         color: #FFFFFF;
         position: relative;
         padding-left: 26px;
+        height: 332px;
 
         &::after {
             content: '';
@@ -44,6 +52,18 @@
             max-width: 160px;
             margin-bottom: 10px;
             line-height: 107.8%;
+        }
+
+        &-subtitle {
+            font-size: 16px;
+            line-height: 110.8%;
+            /* or 22px */
+            letter-spacing: -0.025em;
+            text-transform: uppercase;
+            position: absolute;
+            bottom: 20px;
+            left: 20px;
+            z-index: 20;
         }
 
         &-description {
