--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -331,7 +331,7 @@
         &-container {
             padding-left: 25px;
             max-height: 0;
-            transition: max-height 0.5s ease-in-out;
+            transition: max-height 0.5s ease-in-out, opacity 0.4s ease-in-out;
             // margin-bottom: 50px;
             // padding-bottom: 60px;
         }
