--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -329,6 +329,120 @@
         }
     }
 
+    // discounts-768
+    .discounts {
+        overflow: hidden;
+
+        &__container {
+            max-width: 768px;
+            margin-left: auto;
+            margin-right: auto;
+            // overflow: hidden;
+        }
+
+        &__marquee {
+            font-weight: 300;
+            font-size: 162px;
+            line-height: 110.8%;
+            width: 900px;
+            left: 0;
+            top: 0;
+        }
+
+        &__card {
+            width: 100%;
+            padding-left: 56px;
+            height: 465px;
+            padding-top: 48px;
+
+            &-title {
+                font-style: normal;
+                font-weight: 300;
+                font-size: 45px;
+                line-height: 107.8%;
+                /* or 49px */
+                letter-spacing: -0.025em;
+                margin-bottom: 8px;
+            }
+
+            &-button {
+                padding: 22px 36px 22px 35px;
+                font-size: 14px;
+                line-height: 120.3%;
+                /* identical to box height, or 17px */
+                letter-spacing: 0.105em;
+                margin-bottom: 24px;
+            }
+        }
+
+        &__swiper {
+            &-container {
+                overflow: visible;
+            }
+
+            &-wrapper {
+                display: flex;
+                flex-direction: column;
+                margin-left: auto;
+                margin-right: 20%;
+                width: 396px !important;
+            }
+        }
+
+        &__swiper-slide {
+            width: 396px !important;
+
+            &:nth-child(1) {
+                margin-bottom: 84px;
+
+                .discounts__card-title {
+                    max-width: 250px;
+                }
+
+                .discounts__card-description {
+                    max-width: 248px;
+                }
+            }
+
+            &:nth-child(2) {
+                width: 369px;
+
+                .discounts__card {
+                    height: 195px;
+
+                    &-subtitle {
+                        font-size: 20px;
+                    }
+                }
+            }
+
+            &:nth-child(3) {
+                right: -341px;
+                top: 361px;
+                width: 504px;
+                position: absolute;
+                // right: 0;
+
+                .discounts__card {
+                    padding-left: 0;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    height: 290px;
+                    text-align: center;
+
+                    &-title {
+                        max-width: 323px;
+                    }
+
+                    &-description {
+                        max-width: 324px;
+                    }
+                }
+            }
+        }
+    }
+
     // production-768 
     .production {
         &__wrap {
@@ -394,6 +508,8 @@
 
     // models-768
     .models {
+        background-color: #fafafa;
+        padding-bottom: 116px;
 
         &__swiper-wrapper {
             margin-bottom: -13px !important;
@@ -540,6 +656,41 @@
             font-size: 15px;
             margin-top: 4px;
         }
+    }
+
+    // designers-768
+    .designers {
+        background-color: #fafafa;
+
+        &__container {
+            max-width: 768px;
+
+
+        }
+
+        &__title {
+            font-size: 118px;
+            line-height: 107.8%;
+            width: 671px;
+            margin-bottom: 86px;
+        }
+
+        &__description {
+            font-size: 16px;
+            width: 329px;
+            margin-bottom: 91px;
+        }
+
+        &__button {
+            width: auto;
+            padding: 24px 29px 22px 29px;
+
+        }
+
+        &__img {
+            right: -431px;
+        }
+
     }
 
     // stages-768
@@ -1662,7 +1813,101 @@
         }
     }
 
+    // discounts-1280
+    .discounts {
+        &__marquee {
+            font-weight: 300;
+            font-size: 300px;
+            line-height: 110.8%;
+            width: 1400px;
+            left: -350px;
+        }
 
+        &__swiper {
+            &-slide {
+                &:nth-child(1) {
+                    width: 519px !important;
+                    margin-bottom: 105px;
+
+                    .discounts {
+                        &__card {
+                            padding-left: 64px;
+                            height: 609px;
+
+                            &-title {
+                                max-width: 331px;
+                                margin-bottom: 25px;
+                            }
+
+                            &-description {
+                                max-width: 299px;
+                                margin-bottom: 86px;
+                            }
+                        }
+                    }
+                }
+
+                &:nth-child(2) {
+                    width: 519px !important;
+
+                    .discounts {
+                        &__card {
+                            height: 274px;
+
+                            &-subtitle {
+                                max-width: 331px;
+                                left: 41px;
+                                bottom: 42px;
+                            }
+
+                        }
+                    }
+                }
+
+                &:nth-child(3) {
+                    right: -656px;
+                    top: 436px;
+                    width: 583px !important;
+
+                    .discounts {
+                        &__card {
+                            height: 336px;
+                            padding-top: 30px;
+
+                            &-title {
+                                max-width: 458px;
+                                font-weight: 300;
+                                font-size: 64px;
+                                line-height: 107.8%;
+                                /* or 69px */
+                                text-align: center;
+                                margin-bottom: 37px;
+                            }
+
+                            &-description {
+                                max-width: 454px;
+                            }
+
+                        }
+                    }
+                }
+            }
+
+            &-wrapper {
+                margin-right: auto;
+            }
+        }
+
+        &__card {
+            &-button {
+                padding: 23px 32px;
+                font-size: 20px;
+                line-height: 120.3%;
+                /* or 24px */
+                letter-spacing: 0.105em;
+            }
+        }
+    }
 
     // production-1280
     .production {
@@ -1730,6 +1975,7 @@
     .models {
         padding-top: 59px;
 
+
         &__swiper {
             &-wrapper {
                 margin-bottom: 39px !important;
@@ -1742,8 +1988,9 @@
 
         &__container {
             padding-right: 0;
-            width: 100%;
-            max-width: none;
+            max-width: 1350px;
+            margin-left: auto;
+            margin-right: auto;
             padding-left: 56px;
         }
 
@@ -1821,6 +2068,28 @@
                     height: 10.66px;
                 }
             }
+        }
+    }
+
+    // designers-1280
+    .designers {
+        &__container {
+            max-width: 1170px;
+        }
+
+        &__title {
+            font-size: 200px;
+            line-height: 107.8%;
+            margin-bottom: 141px;
+            width: 1137px;
+        }
+
+        &__description {
+            margin-bottom: 49px;
+        }
+
+        &__img {
+            right: -630px;
         }
     }
 
@@ -2595,6 +2864,108 @@
         }
     }
 
+    // discounts-1920
+    .discounts {
+        &__marquee {
+            font-size: 350px;
+            line-height: 110.8%;
+            left: -600px;
+        }
+
+        &__card {
+            &-title {
+                font-size: 72px;
+                line-height: 107.8%;
+            }
+
+            &-subtitle {
+                font-size: 25px;
+                line-height: 110.8%;
+            }
+
+            &-description {
+                line-height: 140%;
+            }
+        }
+
+        &__swiper {
+            &-slide {
+                &:nth-child(1) {
+                    width: 551px !important;
+                    margin-bottom: 105px;
+
+                    .discounts {
+                        &__card {
+                            padding-top: 76px;
+                            padding-left: 64px;
+                            height: 648px;
+
+                            &-title {
+                                max-width: 372px;
+                                margin-bottom: 36px;
+
+                            }
+
+                            &-description {
+                                max-width: 339px;
+                                margin-bottom: 86px;
+                            }
+                        }
+                    }
+                }
+
+                &:nth-child(2) {
+                    width: 631px !important;
+
+                    .discounts {
+                        &__card {
+                            height: 333px;
+
+                            &-subtitle {
+                                max-width: 331px;
+                                left: 38px;
+                                bottom: 33px;
+                            }
+
+                        }
+                    }
+                }
+
+                &:nth-child(3) {
+                    right: -773px;
+                    top: 436px;
+                    width: 675px !important;
+
+                    .discounts {
+                        &__card {
+                            height: 388px;
+                            padding-top: 30px;
+
+                            &-title {
+                                max-width: 458px;
+                                font-weight: 300;
+                                font-size: 64px;
+                                line-height: 107.8%;
+                                /* or 69px */
+                                text-align: center;
+                                margin-bottom: 45px;
+                            }
+
+                            &-description {
+                                max-width: 454px;
+                            }
+
+                        }
+                    }
+                }
+            }
+
+            &-wrapper {
+                left: -200px;
+            }
+        }
+    }
+
     // production-1920
     .production {
         &__wrap {
@@ -2703,6 +3074,7 @@
 
         &__swiper-wrapper {
             margin-bottom: 2px !important;
+            transform: translate3d(0, 0, 0) !important;
         }
 
         .card {
@@ -2717,6 +3089,7 @@
             height: 628px;
             padding-top: 135px;
             // padding-bottom: 62px;
+            margin-right: 0;
 
             &-text {
                 position: absolute;
@@ -2776,6 +3149,39 @@
                     height: 11.44px;
                 }
             }
+        }
+    }
+
+    // designers-1920
+    .designers {
+        &__container {
+            max-width: 1920px;
+            padding-left: 166px;
+            padding-bottom: 200px;
+        }
+
+        &__title {
+            font-size: 250px;
+            line-height: 107.8%;
+            margin-bottom: 174px;
+            width: 1422px;
+            margin-left: -140px;
+        }
+
+        &__description {
+            width: 454px;
+            margin-bottom: 62px;
+
+        }
+
+        &__button {
+            padding-left: 46px;
+            padding-right: 46px;
+            background-color: $color-red;
+        }
+
+        &__img {
+            right: -936px;
         }
     }
 
