--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -2753,6 +2753,10 @@
             &-phone {
                 margin-right: 16px;
             }
+
+            &-button {
+               border-bottom-color: transparent;
+            }
         }
 
         &__block {
