--- a/src/scss/components/_discounts.scss
+++ b/src/scss/components/_discounts.scss
@@ -118,4 +118,35 @@
         // padding-left: 100%;
         // animation: marquee 10s linear infinite;
     }
+
+    &__hover-block {
+        position: absolute;
+        width: 120%;
+        height: 120%;
+        top: -10%;
+        background-color: rgba(#fff, 0);
+        z-index: 2000;
+        &:hover {
+            cursor: none;
+        }
+    }
+
+    &__hover-wrap {
+        width: 100%;
+        height: 100%;
+        position: relative;
+    }
+
+    &__hover-cursor {
+        z-index: 2000;
+        // opacity: 0;
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        transition: opacity 0.2s ease-in-out;
+        width: 182px;
+        height: 182px;
+        cursor: none;
+    }
 }
